<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    tools:context=".ui.list.MeetingListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/inputs_dialog_margin"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_meeting_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/inputs_dialog_margin"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_all_attendees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_meeting_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/inputs_dialog_margin"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/meeting_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_meeting_hour"
                android:onClick="showTimePickerDialog"
                android:text="7:00" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_margin="@dimen/inputs_dialog_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            style="@style/Theme.P4_lamzone_mareu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/inputs_dialog_margin"
            android:text="Save"
            app:cornerRadius="@dimen/inputs_dialog_margin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>