<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.p4_lamzone_mareu.ui.list.MeetingListActivity">
    <item
        android:id="@+id/search_btn"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_search_icon"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

</menu>