<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_meetings"
    android:name="com.openclassrooms.entrevoisins.ui.neighbour_list.NeighbourFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/fab_margin"
    android:layout_marginRight="@dimen/fab_margin"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.list.MeetingListActivity"
    tools:listitem="@layout/viewholder_meeting" />